--- a/index.html
+++ b/index.html
@@ -1,204 +1,88 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-	<link rel="icon" href="./images/TwoCIN.png" />	
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bugsfree NFTs</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-  </head>
-  <body class="light-theme">
-    <header class="header">
-      <nav class="nav">
-        <div class="navbar-brand">
-          <h1>Bugsfree</h1>
-          <div class="menu">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
-          <div class="icon">
-            <i class="fa fa-moon"></i>
-          </div>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Bugsfree | Open Source and Decentralized world</title>  
+  <!-- Feather Icons -->
+  <script src="https://unpkg.com/feather-icons"></script>  
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/113718082?v=4&size=64">
+  <link href="./css/styles.css" rel="stylesheet">
+  <!-- <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script> -->
+  
+</head>
+<body>
 
-        <div class="lists-container">
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a href="https://opensea.io/bugsfree" target="_blank" class="nav-link"> OpenSea </a>
-            </li>
-            <li class="nav-item">
-              <a href="https://mintable.com/u/bugsfree" target="_blank" class="nav-link"> Mintable </a>
-            </li>
-			<li class="nav-item">
-              <a href="https://bugsfree.nftz.me" target="_blank" class="nav-link"> Deso Blockchain </a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">
-                <button class="btn">Connect wallet</button>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-
-    <main class="main">
-      <section class="banner">
-        <h1 class="banner-title">All you need is Bugsfree NFTs</h1>
-        <p class="subtitle banner-subtitle">
-          Bugsfree NFTs is a collection of 500 unique arts (Every bundle) and a total of 10K mintable NFTs
-        </p>
-        <!-- <button class="btn banner-btn">Mint Now</button> -->
-        <div class="timer grid">
-          <div class="days time">
-            <span class="operand"></span>
-            <span>Days</span>
-          </div>
-
-          <div class="hours time">
-            <span class="operand"></span>
-            <span>Hours</span>
-          </div>
-
-          <div class="minutes time">
-            <span class="operand"></span>
-            <span>Minutes</span>
-          </div>
-          <div class="seconds time">
-            <span class="operand"></span>
-            <span>Seconds</span>
-          </div>
-        </div>
-      </section>
-
-      <!-- Bugsfree collection -->
-
-      <section class="images-collection container bugsfree">
-        <div class="grid">
-          <div class="img-container">
-            <img src="./images/TwHpaw.png" alt="">
-          </div>
-
-          <div class="img-container">
-            <img src="./images/TwoNaX.md.png" alt="">
-          </div>
-
-          <div class="img-container">
-            <img src="./images/TwoI12.md.png" alt="">
-          </div>
-
-          <div class="img-container">
-            <img src="./images/TwHywk.png" alt="">
-          </div>
-
-          <div class="img-container">
-            <img src="./images/Twodsg.md.png" alt="">
-          </div>
-
-          <div class="img-container">
-            <img src="./images/TwoR3r.png" alt="">
-          </div>
-        </div>
-      </section>
-
-      <div class="dummy-copyright">
-        <p>
-          It's all about professional field where everyone enjoyed to create each bundles.
-        </p>
+  <header>
+    <div class="logo">
+      <img src="https://avatars.githubusercontent.com/u/113718082?v=4&size=64" alt="Bugsfree">
+      <span>Bugsfree</span>
+    </div>
+    <div class="nav-icons">
+      <div class="icon-btn" id="visitorBtn" title="Visitor Counter"><i data-feather="users"></i></div>
+      <div class="icon-btn" id="contactBtn" title="Contact Me"><i data-feather="mail"></i></div>
+      <div class="icon-btn" id="resumeBtn" title="Download Resume"><i data-feather="download"></i></div>
+      <div class="theme-toggle" id="themeToggle" title="Toggle Theme">
+        <i data-feather="sun" style="position:absolute;left:8px;top:6px;width:18px;height:18px;"></i>
+        <i data-feather="moon" style="position:absolute;right:8px;top:6px;width:18px;height:18px;"></i>
       </div>
+    </div>
+  </header>
 
+  <div class="container">
+    <div class="hero-section">
+      <h1 class="hero-title" id="heroTitle"></h1>
+      <p class="subtitle">Crafting reliable, innovative, and impactful code — one commit at a time</p>
+    </div>
 
-      <!-- video container -->
-      <div class="video-container">
-        <video src="coming-soon.mp4" autoplay loop controls></video>
-      </div>
-      <!-- Roadmap -->
-      <section class="roadmap container">
-        <div class="title">
-          <h1 class="section-title">What's next?</h1>
-          <p class="subtitle section-subtitle">Our roadmap 🚀 (Full roadmap is coming soon) </p>
-        </div>
-        <div class="grid">
-          <div class="roadmap-left">
-            <h1 class="roadmap-title">100 NFTs launch 🌋</h1>
-            <p class="subtitle roadmap-subtitle">
-              First 100 NFTs becomes the mint pass for Bugsfree NFT
-            </p>
-          </div>
-          <div class="roadmap-right d-none"></div>
+    <div class="stats-grid">
+      <div class="stat-card"><h3 id="totalRepos">0</h3><p>Total Projects</p></div>
+      <div class="stat-card"><h3 id="totalStars">0</h3><p>Stars Earned</p></div>
+      <div class="stat-card"><h3 id="totalForks">0</h3><p>Forks</p></div>
+      <div class="stat-card"><h3 id="visitors">0</h3><p>Visitors Today</p></div>
+    </div>
 
-          <div class="roadmap-left d-none"></div>
-          <div class="roadmap-right">
-            <h1 class="roadmap-title">Airdrop 100 for our holders 🙈</h1>
-            <p class="subtitle roadmap-subtitle">
-              100 Bugsfree holders will mint 100 new Bugsfree NFT on
-              a first-to-claim basis
-            </p>
-          </div>
+    <div class="search-box">
+      <i data-feather="search"></i>
+      <input type="text" id="searchInput" placeholder="Search projects by name, language, or topic...">
+    </div>
 
-          <div class="roadmap-left">
-            <h1 class="roadmap-title">+500 NFTs if sold out</h1>
-            <p class="subtitle roadmap-subtitle">
-              If sold out, we'll gradually release more Bugsfree NFTs, by 100
-              each week, for late-comers to mint
-            </p>
-          </div>
-          <div class="roadmap-right d-none"></div>
+    <main id="repos" class="repos-grid"></main>
+    <div class="pagination" id="pagination"></div>
 
-          <div class="section-divider"></div>
-        </div>
-      </section>
+    <div class="section-header">
+      <h2 class="section-title">Recent Activity</h2>
+      <p class="section-subtitle">Latest updates from GitHub</p>
+    </div>
+    <div id="activity" class="activity-feed"></div>
 
-      <!-- faq -->
-      <section class="faq">
-        <div class="title">
-          <h1 class="section-title">Where will the funds go?</h1>
-          <p class="subtitle section-subtitle">
-            75% of earnings will be used to fund an orphans community and rest of 25% will go for maintance digital activities of our artists.
-          </p>
-        </div>
-      </section>
-      <section class="pre-footer images-collection container">
-        <div class="grid">
-          <div class="img-container">
-            <img src="./images/TwHH0N.png" alt="">
-          </div>
+    <div class="section-header">
+      <h2 class="section-title">Latest Blog Posts</h2>
+      <p class="section-subtitle">Thoughts, tutorials, and insights</p>
+    </div>
+    <div id="blog" class="blog-posts"></div>
+    <div class="pagination" id="blogPagination"></div>
+  </div>
 
-          <div class="img-container">
-            <img src="./images/TwHLZL.md.png" alt="">
-          </div>
+  <div class="modal" id="contactModal">
+    <div class="modal-content">
+      <button class="close-modal" id="closeModal">×</button>
+      <h2>Get In Touch</h2>
+      <form id="contactForm">
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea placeholder="Your Message" rows="5" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </div>
 
-          <div class="img-container">
-            <img src="./images/TwH2xP.md.png" alt="">
-          </div>
+  <footer>
+    <p>© <span id="year"></span> <a href="/">Bugsfree</a> Built with Passion • Powered by Open Source</p>
+  </footer>
 
-          <div class="img-container">
-            <img src="./images/TwH0rj.md.png" alt="">
-          </div>
-
-          <div class="img-container">
-            <img src="./images/TwHQiS.png" alt="">
-          </div>
-
-          <div class="img-container">
-            <img src="./images/TwH31b.md.png" alt="">
-          </div>
-        </div>
-      </section>
-    </main>
-
-    
-    <footer>
-        <div class="socials">
-            <a href="https://twitter.com/bugsfreeweb"><i class="fab fa-twitter"></i></a>            
-            <a href="https://github.com/bugsfreeweb"><i class="fab fa-github"></i></a>
-			<a href="https://ud.me/bugsfree.nft"><i class="fas fa-wallet"></i></a>
-        </div>
-    </footer>
-    <script src="script.js"></script>
-  </body>
+  <script src="./js/app.js"></script>
+</body>
 </html>
