--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <span>Bugsfree</span>
     </div>
     <div class="nav-icons">
-      <div class="icon-btn" id="visitorBtn" title="Visitor Counter"><i data-feather="users"></i></div>
+      <!--<div class="icon-btn" id="visitorBtn" title="Visitor Counter"><i data-feather="users"></i></div>
       <div class="icon-btn" id="contactBtn" title="Contact Me"><i data-feather="mail"></i></div>
-      <div class="icon-btn" id="resumeBtn" title="Download Resume"><i data-feather="download"></i></div>
+      <div class="icon-btn" id="resumeBtn" title="Download Resume"><i data-feather="download"></i></div>-->
       <div class="theme-toggle" id="themeToggle" title="Toggle Theme">
         <i data-feather="sun" style="position:absolute;left:8px;top:6px;width:18px;height:18px;"></i>
         <i data-feather="moon" style="position:absolute;right:8px;top:6px;width:18px;height:18px;"></i>
