--- a/index.html
+++ b/index.html
@@ -3,25 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bugsfree | Open Source and Decentralized world</title>  
+  <title>Bugsfree | Open Source and Decentralized world</title>
   <!-- Feather Icons -->
-  <script src="https://unpkg.com/feather-icons"></script>  
+  <script src="https://unpkg.com/feather-icons"></script>
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/113718082?v=4&size=64">
   <link href="./css/styles.css" rel="stylesheet">
   <!-- <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script> -->
-  
+ 
 </head>
 <body>
-
   <header>
     <div class="logo">
       <img src="https://avatars.githubusercontent.com/u/113718082?v=4&size=64" alt="Bugsfree">
       <span>Bugsfree</span>
     </div>
     <div class="nav-icons">
-      <div class="icon-btn" id="visitorBtn" title="Visitor Counter"><i data-feather="users"></i></div>
+      <div class="icon-btn" id="visitorBtn" data-tooltip="Total Visitors: 0"><i data-feather="users"></i></div>
       <div class="icon-btn" id="contactBtn" title="Contact Me"><i data-feather="mail"></i></div>
       <div class="icon-btn" id="resumeBtn" title="Download Resume"><i data-feather="download"></i></div>
       <div class="theme-toggle" id="themeToggle" title="Toggle Theme">
@@ -66,14 +65,15 @@
     <div class="pagination" id="blogPagination"></div>
   </div>
 
+  <!-- Contact Modal with Real Email (Formspree) -->
   <div class="modal" id="contactModal">
     <div class="modal-content">
       <button class="close-modal" id="closeModal">×</button>
       <h2>Get In Touch</h2>
-      <form id="contactForm">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Your Message" rows="5" required></textarea>
+      <form action="https://formspree.io/f/myzrpywo" method="POST" id="contactForm">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
         <button type="submit">Send Message</button>
       </form>
     </div>
@@ -83,6 +83,6 @@
     <p>© <span id="year"></span> <a href="/">Bugsfree</a> Built with Passion • Powered by Open Source</p>
   </footer>
 
-  <script src="./js/app.js"></script>
+ <script src="./js/app.js"></script>
 </body>
 </html>
