--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
 <body>
   <header>
     <div class="logo">
-      <img src="https://avatars.githubusercontent.com/u/113718082?v=4&size=64" alt="Bugsfree">
-      <span>Bugsfree</span>
+      <a href="https://bugsfree.vercel.app"><img src="https://avatars.githubusercontent.com/u/113718082?v=4&size=64" alt="Bugsfree">
+      <span>Bugsfree</span></a>
     </div>
     <div class="nav-icons">
-      <div class="icon-btn" id="contactBtn" title="Contact Me"><i data-feather="mail"></i></div>
-      <div class="icon-btn" id="resumeBtn" title="Download Resume"><i data-feather="download"></i></div>
+      <div class="icon-btn" id="contactBtn" title="Contact Me"><i data-feather="mail"></i></div>      
       <div class="theme-toggle" id="themeToggle" title="Toggle Theme">
         <i data-feather="sun" style="position:absolute;left:8px;top:6px;width:18px;height:18px;"></i>
         <i data-feather="moon" style="position:absolute;right:8px;top:6px;width:18px;height:18px;"></i>
@@ -229,7 +228,7 @@
     </div>
   </div>
   <footer>
-    <p>© <span id="year"></span> <a href="/">Bugsfree</a> Built with Passion • Powered by Open Source</p>
+    <p>© <span id="year"></span> <a href="https://bugsfree.vercel.app">Bugsfree</a> Built with Passion • Powered by Open Source</p>
   </footer>
  <script src="./js/app.js"></script>
 </body>
