Remove link from logo in index.html

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
   <header>
     <div class="logo">
-      <a href="https://bugsfree.vercel.app"><img src="https://avatars.githubusercontent.com/u/113718082?v=4&size=64" alt="Bugsfree">
-      <span>Bugsfree</span></a>
+      <img src="https://avatars.githubusercontent.com/u/113718082?v=4&size=64" alt="Bugsfree">
+      <span>Bugsfree</span>
     </div>
     <div class="nav-icons">
       <div class="icon-btn" id="contactBtn" title="Contact Me"><i data-feather="mail"></i></div>      
